--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <!-- Basic Page Needs
     ================================================== -->
-    <meta charset="u8">
+    <!--<meta charset="u8">-->
+ 	<meta charset="UTF-8">
     <!--[if IE]><meta http-equiv="x-ua-compatible" content="IE=9" /><![endif]-->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Ramya Surati </title>
