--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     ================================================== -->
     <!--<meta charset="u8">-->
  	<meta charset="UTF-8">
+ 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
     <!--[if IE]><meta http-equiv="x-ua-compatible" content="IE=9" /><![endif]-->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Ramya Surati </title>
