--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
               </button>
-              <a class="navbar-brand" href="#about" style="color: #FFFFFF; ">Ramya A. Surati</a>
+              <a class="navbar-brand" href="#about" style="color: #FFFFFF; ">Ramya Surati</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
