--- a/index.html
+++ b/index.html
@@ -500,6 +500,21 @@
                     <div class="col-md-10 col-md-offset-1">
 
 
+                       
+                    	<div class="media experience"> <!-- experience #1 -->
+                            <div class="media-right media-middle">
+                               <!-- <i class="fa fa-google-plus"></i>-->
+                            </div>
+                            <div class="media-body">
+                                <h4 class="media-heading"><a href="https://www.coursera.org/account/accomplishments/certificate/Z6KF3CL2DYT5"> Neural Networks & Deep Learning, Coursera</a></h4>
+								<h5><a href="https://www.coursera.org/account/accomplishments/certificate/Z6KF3CL2DYT5">May, 2020</a></h5>
+                                <p>This course by coursera strongly focuses on the basics and seems very informative to master in the field of deeplearning and neural networks. Special thanks to the instructor Andre Ng.</p>
+                            </div>
+                        </div>
+ 						<!-- experience #1-->
+
+
+
 
 
                     	<div class="media experience"> <!-- experience #1 -->
