--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                     <h1>Hi, I am Ramya Surati</br>
                     A CSE student & Tech fanatic </h1>
                     <p class="lead">I am quirky and love to explore newer domains in life.</p>
-                    <a href="#works" class="scroll goto-btn">Download Resume</a> <!-- Link to your portfolio section -->
+                    <!--<a href="#works" class="scroll goto-btn">Download Resume</a> --><!-- Link to your portfolio section -->
                 </div><!-- End Input Your Home Content Here -->
             </div> <!-- end container -->
         </div><!-- End Overlay Color -->
