--- a/index.html
+++ b/index.html
@@ -134,8 +134,8 @@
                             <i class="fa fa-star"></i>
                         </div>
                         <div class="media-body" >
-                            <h4 class="media-heading">Web & App Design</h4>
-                            <p>To design an eye-catching website or app is an art. This art cannot be learned overnight, requires immense practice and patience. A web designer is someone who is both creative and technically inclined, and uses both these attributes to build or redesign websites inorder to make the website pleasing.
+                            <h4 class="media-heading">Data Science</h4>
+                            <p>To analyse and predict is a skillful art. Data science is an inter-disciplinary field that uses scientific methods, processes, algorithms and systems to extract knowledge and insights from many structural and unstructured data. Data science is related to data mining, deep learning and big data.
 						</p>
                         </div>
                     </div><!-- end Service #4 -->
