--- a/index.html
+++ b/index.html
@@ -678,10 +678,10 @@
 		 <ul class="list-inline social pull-left">
                 <li><a href="https://www.facebook.com/ramya.surati.1/"><i class="fa fa-facebook"></i></a></li> <!-- Change # With your FB Link -->
                 
-                <li><a href="https://www.instagram.com/ramya.surati/"><i class="fa fa-instagram" ></i></a></li>
+<!--                 <li><a href="https://www.instagram.com/ramya.surati/"><i class="fa fa-instagram" ></i></a></li>
 
-                <li><a href="https://twitter.com/SuratiRamya"><i class="fa fa-twitter" ></i></a></li> <!-- Change # With your Twitter Link -->
-
+                <li><a href="https://twitter.com/SuratiRamya"><i class="fa fa-twitter" ></i></a></li> Change # With your Twitter Link -->
+ 
                 <li><a href="https://www.linkedin.com/in/ramya-surati-6100b8163/"><i class="fa fa-linkedin"></i></a></li> <!-- Change # With your LinkedIn Link --> 
             	 <li><a href="https://github.com/rsurati"><i class="fa fa-github"></i></a></li>
             </ul>
