--- a/index.html
+++ b/index.html
@@ -509,7 +509,7 @@
                                <!-- <i class="fa fa-google-plus"></i>-->
                             </div>
                             <div class="media-body">
-                                <h4 class="media-heading"><a href="https://www.coursera.org/account/accomplishments/certificate/NQ52W9UNN73S"> Research & Development Intern, Institute For Plasma Reasearch Gandhinagar</a></h4>
+                                <h4 class="media-heading"><a> Research & Development Intern, Institute For Plasma Research Gandhinagar</a></h4>
 								<h5><a>December, 2020</a></h5>
                                 <p>Software container technology exploration and containerization of a legacy application (IPR-CS-2020-010)
 									</p>
