--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
 			</div>
 			<div class="col-sm-6 col-sm-offset-1 scrollimation fade-left in">
 				<h1>Hello, I am Ramya Surati...</h1>
-				<p>I am Ramya, a 20 year old technophile from Ahmedabad, India. Currently, I am going after my Bachelors in Computer Engineering from Dharmsinh Desai University (2017-2021), Nadiad(Gujarat). Right now I am exploring machine learning. My avocation is to play cricket or volleyball, reading books and travelling. I personally believe that, good things happen to those who do good for others. I try my best to make the most of my experiences and to turn them into positives.Not all the time, but most of the time. I just know that I am capable of anything I put my mind to. I know that I am destined for great things and have a big future ahead of me.</p>
+				<p>I am Ramya, a 20 year old technophile from Ahmedabad, India. Currently, I am going after my Bachelors in Computer Engineering from Dharmsinh Desai University (2017-2021), Nadiad(Gujarat). Right now, I am working as SDE intern in one of the best IT comapny at Banglore. My avocation is to play cricket or volleyball, reading books and travelling. I personally believe that, good things happen to those who do good for others. I try my best to make the most of my experiences and to turn them into positives.Not all the time, but most of the time. I just know that I am capable of anything I put my mind to. I know that I am destined for great things and have a big future ahead of me.</p>
 				
 			</div>
 		</div><!--End row -->
