--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
             <div class="container"> <!-- container -->
                 <div class="content-heading text-center"> <!-- Input Your Home Content Here -->
                     <h1>Hi, I am Ramya Surati</br>
-                    A CSE student & Tech fanatic </h1>
+                    A CSE undergrad & Tech fanatic </h1>
                     <p class="lead">I am quirky and love to explore newer domains in life.</p>
                     <!--<a href="#works" class="scroll goto-btn">Download Resume</a> --><!-- Link to your portfolio section -->
                 </div><!-- End Input Your Home Content Here -->
@@ -185,7 +185,7 @@
 			</div>
 			<div class="col-sm-6 col-sm-offset-1 scrollimation fade-left in">
 				<h1>Hello, I am Ramya Surati...</h1>
-				<p>I am Ramya, a 20 year old technophile from Ahmedabad, India. Currently, I am going after my Bachelors in Computer Engineering from Dharmsinh Desai University (2017-2021), Nadiad(Gujarat). Right now, I am working as SDE intern in one of the best IT comapny at Banglore. My avocation is to play cricket or volleyball, reading books and travelling. I personally believe that, good things happen to those who do good for others. I try my best to make the most of my experiences and to turn them into positives.Not all the time, but most of the time. I just know that I am capable of anything I put my mind to. I know that I am destined for great things and have a big future ahead of me.</p>
+				<p>I am Ramya, a 21 year old technophile from Ahmedabad, India. I completed my Bachelors in Computer Engineering from Dharmsinh Desai University (2017-2021), Nadiad(Gujarat). Right now, I am working as SDE intern in one of the best IT company called Integration Wizards Solution, Bangalore. My avocation is to play cricket or volleyball, reading books and travelling. I personally believe that, good things happen to those who do good for others. I try my best to make the most of my experiences and to turn them into positives.Not all the time, but most of the time. I just know that I am capable of anything I put my mind to. I know that I am destined for great things and have a big future ahead of me.</p>
 				
 			</div>
 		</div><!--End row -->
@@ -511,8 +511,8 @@
                             </div>
                             <div class="media-body">
                                 <h4 class="media-heading"><a> Software Engineering Intern, Integration Wizards Solutions, Banglore</a></h4>
-								<h5><a>April, 2021</a></h5>
-                                <p>Currently, working as a SDE intern in the field of .NET in the backend team.
+								<h5><a>April, 2021 - Present</a></h5>
+                                <p>Currently, working as a SDE intern in the field of .NET in the Integration team.
                                 </p>
                             </div>
                         </div>
