--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
 			</div>
 			<div class="col-sm-6 col-sm-offset-1 scrollimation fade-left in">
 				<h1>Hello, I am Ramya Surati...</h1>
-				<p>I am Ramya, a 21 year old technophile from Ahmedabad, India. I completed my Bachelors in Computer Engineering from Dharmsinh Desai University (2017-2021), Nadiad(Gujarat). Right now, I am working as SDE intern in one of the best IT company called Integration Wizards Solution, Bangalore. My avocation is to play cricket or volleyball, reading books and travelling. I personally believe that, good things happen to those who do good for others. I try my best to make the most of my experiences and to turn them into positives.Not all the time, but most of the time. I just know that I am capable of anything I put my mind to. I know that I am destined for great things and have a big future ahead of me.</p>
+				<p>I am Ramya, a 21 year old technophile from Ahmedabad, India. I completed my Bachelors in Computer Engineering from Dharmsinh Desai University (2017-2021), Nadiad (Gujarat). Right now, I am working as an Associate Software Engineer in one of the best Ed-Tech company called BYJU'S, Bangalore. My avocation is to play cricket or volleyball, reading books and travelling. I personally believe that, good things happen to those who do good for others. I try my best to make the most of my experiences and to turn them into positives.Not all the time, but most of the time. I just know that I am capable of anything I put my mind to. I know that I am destined for great things and have a big future ahead of me.</p>
 				
 			</div>
 		</div><!--End row -->
@@ -505,14 +505,30 @@
 
 
 
+                    	  <div class="media experience"> <!-- experience #1 -->
+                            <div class="media-right media-middle">
+                               <!-- <i class="fa fa-google-plus"></i>-->
+                            </div>
+                            <div class="media-body">
+                                <h4 class="media-heading"><a> Associate Software Engineer, BYJU'S, Bangalore</a></h4>
+								<h5><a>August-2021 - Present</a></h5>
+                                <p>Working in the MERN stack to develop robust solutions.
+                                </p>
+                            </div>
+                        </div>
+
+
+
+
                         <div class="media experience"> <!-- experience #1 -->
                             <div class="media-right media-middle">
                                <!-- <i class="fa fa-google-plus"></i>-->
                             </div>
                             <div class="media-body">
                                 <h4 class="media-heading"><a> Software Engineering Intern, Integration Wizards Solutions, Banglore</a></h4>
-								<h5><a>April, 2021 - Present</a></h5>
-                                <p>Currently, working as a SDE intern in the field of .NET in the Integration team.
+								<h5><a>April, 2021 - August-2021</a></h5>
+                                <p>Worked initially as an intern in the Integeration team. Later served as an Integeration Consulatant. Durring this 
+                                	journey I worked in .Net, Sql Server Management Studio, compression of api, docker api's and much more.
                                 </p>
                             </div>
                         </div>
