--- a/index.html
+++ b/index.html
@@ -491,7 +491,7 @@
     <section id="experience">
         <div class="container"> <!-- container -->
             <div class="section-header">
-                <h2>Certification & Projects</h2>
+                <h2>Experience, Certifications & Projects</h2>
                 <h5><em>Creating Innovations and Working for Improvement</em></h5>
                 <div class="fancy"><span></span></div>
             </div>
@@ -525,10 +525,10 @@
                                <!-- <i class="fa fa-google-plus"></i>-->
                             </div>
                             <div class="media-body">
-                                <h4 class="media-heading"><a> Software Engineering Intern, Integration Wizards Solutions, Banglore</a></h4>
-								<h5><a>April, 2021 - August-2021</a></h5>
-                                <p>Worked initially as an intern in the Integeration team. Later served as an Integeration Consulatant. Durring this 
-                                	journey I worked in .Net, Sql Server Management Studio, compression of api, docker api's and much more.
+                                <h4 class="media-heading"><a> Integeration Consultant, Integration Wizards Solutions, Bangalore</a></h4>
+								<h5><a>April-2021 - August-2021</a></h5>
+                                <p>Worked initially as an intern in the Integeration team, later served as an Integeration Consultant. During this 
+                                	journey I worked in .Net, Sql Server Management Studio, compression of api, docker api's and much more to deliver high quality solution.
                                 </p>
                             </div>
                         </div>
