--- a/index.html
+++ b/index.html
@@ -505,7 +505,7 @@
 
 
 
-                    	  <div class="media experience"> <!-- experience #1 -->
+                    	<div class="media experience"> <!-- experience #1 -->
                             <div class="media-right media-middle">
                                <!-- <i class="fa fa-google-plus"></i>-->
                             </div>
@@ -525,9 +525,9 @@
                                <!-- <i class="fa fa-google-plus"></i>-->
                             </div>
                             <div class="media-body">
-                                <h4 class="media-heading"><a> Integeration Consultant, Integration Wizards Solutions, Bangalore</a></h4>
+                                <h4 class="media-heading"><a> Integration Consultant, Integration Wizards Solutions, Bangalore</a></h4>
 								<h5><a>April-2021 - August-2021</a></h5>
-                                <p>Worked initially as an intern in the Integeration team, later served as an Integeration Consultant. During this 
+                                <p>Worked initially as an intern in the Integration team, later served as an Integration Consulatant. Durring this 
                                 	journey I worked in .Net, Sql Server Management Studio, compression of api, docker api's and much more to deliver high quality solution.
                                 </p>
                             </div>
