--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
             <div class="container"> <!-- container -->
                 <div class="content-heading text-center"> <!-- Input Your Home Content Here -->
                     <h1>Hi, I am Ramya Surati</br>
-                    A CSE undergrad & Tech fanatic </h1>
+                    Elevating from undergrad to graduate, Tech passion fueling the academic journey </h1>
                     <p class="lead">I am quirky and love to explore newer domains in life.</p>
                     <!--<a href="#works" class="scroll goto-btn">Download Resume</a> --><!-- Link to your portfolio section -->
                 </div><!-- End Input Your Home Content Here -->
@@ -185,7 +185,7 @@
 			</div>
 			<div class="col-sm-6 col-sm-offset-1 scrollimation fade-left in">
 				<h1>Hello, I am Ramya Surati...</h1>
-				<p>I am Ramya, a 21 year old technophile from Ahmedabad, India. I completed my Bachelors in Computer Engineering from Dharmsinh Desai University (2017-2021), Nadiad (Gujarat). Right now, I am working as an Associate Software Engineer in one of the best Ed-Tech company called BYJU'S, Bangalore. My avocation is to play cricket or volleyball, reading books and travelling. I personally believe that, good things happen to those who do good for others. I try my best to make the most of my experiences and to turn them into positives.Not all the time, but most of the time. I just know that I am capable of anything I put my mind to. I know that I am destined for great things and have a big future ahead of me.</p>
+				<p>My name is Ramya and I'm a 23-year-old Indian who loves computers. I'm from Ahmedabad, India. Currently, I'm enrolled at the University of Windsor in Windsor, Ontario, Canada (2023–2024) to pursue a master's degree in electrical and computer engineering. At Dharmsinh Desai University in Naadiad, Gujarat, I completed my bachelor's degree in computer engineering between 2017 and 2021. In addition, BYJUS', one of the leading Ed-Tech companies in Bangalore, India, hired me as an Associate Software Engineer role in the finance management system. Reading, working out, playing volleyball, and travelling are some of my passions. It's my belief that those who show kindness to others typically receive kindness in return. I strive my best to make full use of my experiences and look for positive elements of them. I am certain that I can do everything I set my mind to. I am aware that I have a bright future ahead of me and that I am destined for great things.</p>
 				
 			</div>
 		</div><!--End row -->
@@ -510,9 +510,11 @@
                                <!-- <i class="fa fa-google-plus"></i>-->
                             </div>
                             <div class="media-body">
-                                <h4 class="media-heading"><a> Associate Software Engineer, BYJU'S, Bangalore</a></h4>
-								<h5><a>August-2021 - Present</a></h5>
-                                <p>Working in the MERN stack to develop robust solutions.
+                                <h4 class="media-heading"><a> Associate Software Engineer, BYJU'S, Bangalore, India</a></h4>
+								<h5><a>August-2021 - November-2022</a></h5>
+                                <p>Working in the finance management system tech team in the Sales return register books module which is geared towards generating and maintaining the invoices, credit notes and financial reports and much more things of the business by the help of robust web app. Actively involve for the migrating the data base by undertaking the key responsibilities of the task.
+                                    Also, implemented the Kafka for the the robust development of the real time processing features of the module.
+                                    Working for the integration of data to the third party for the quick business analysis.
                                 </p>
                             </div>
                         </div>
@@ -525,7 +527,7 @@
                                <!-- <i class="fa fa-google-plus"></i>-->
                             </div>
                             <div class="media-body">
-                                <h4 class="media-heading"><a> Integration Consultant, Integration Wizards Solutions, Bangalore</a></h4>
+                                <h4 class="media-heading"><a> Integration Consultant, Integration Wizards Solutions, Bangalore, India</a></h4>
 								<h5><a>April-2021 - August-2021</a></h5>
                                 <p>Worked initially as an intern in the Integration team, later served as an Integration Consulatant. Durring this 
                                 	journey I worked in .Net, Sql Server Management Studio, compression of api, docker api's and much more to deliver high quality solution.
@@ -689,9 +691,9 @@
 
                         <!-- contact detail using col 4 -->
                         <div class="col-md-4">  
-                            <div class="contact-detail"><a href="https://goo.gl/maps/rSNgF1zQzihgu5me7">
+                            <div class="contact-detail"><a href="https://maps.app.goo.gl/G3Hu3daYyVpXwn6r5">
                                 <i class="fa fa-map-marker"></i>
-                                <h4>Ahmedabad, INDIA</h4></a> <!-- address -->
+                                <h4>Windsor, CANADA</h4></a> <!-- address -->
                             </div>
                         </div>
                         <!-- contact detail using col 4 -->
@@ -705,8 +707,8 @@
                         <!-- contact detail using col 4 -->
                         <div class="col-md-4">
                             <div class="contact-detail">
-                                <a href="tel:834-762-9624"><i class="fa fa-phone"></i>
-                                <h4>+91 83476 29624</h4></a> <!-- phone no. -->
+                                <a href="tel:519-965-5225"><i class="fa fa-phone"></i>
+                                <h4>+1 (519) 965-5225</h4></a> <!-- phone no. --> 
                             </div>
                         </div>
 
