--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
 				<h1>Hello, I am Ramya Surati...</h1>
 				<p>Following the completion of my master's degree in April 2024, with a focus on Computer Engineering, at the University of Windsor in Canada, I have solidified my academic foundation. 
                     This accomplishment complements my earlier bachelor's degree in computer engineering from Dharmsinh Desai University in India.
-                     Additionally, my professional experience as an Associate Software Engineer at BYJUS' in finance management systems has enriched my skill set. 
+                     Additionally, my professional experience as a Software Engineer at BYJUS' in finance management systems has enriched my skill set. 
                      Beyond academia and career, I maintain a vibrant interest in literature, fitness, volleyball, and travel. 
                      Upholding the principle that kindness breeds kindness, I strive to infuse positivity into every aspect of my life. 
                      With a resolute dedication to excellence and an unwavering belief in my potential, I eagerly anticipate a future brimming with opportunities for substantial achievement.</p>
@@ -515,7 +515,7 @@
                                <!-- <i class="fa fa-google-plus"></i>-->
                             </div>
                             <div class="media-body">
-                                <h4 class="media-heading"><a> Associate Software Engineer, BYJU'S, Bangalore, India</a></h4>
+                                <h4 class="media-heading"><a> Software Engineer, BYJU'S, Bangalore, India</a></h4>
 								<h5><a>August-2021 - November-2022</a></h5>
                                 <p>Working in the finance management system tech team in the Sales return register books module which is geared towards generating and maintaining the invoices, credit notes and financial reports and much more things of the business by the help of robust web app. Actively involve for the migrating the data base by undertaking the key responsibilities of the task.
                                     Also, implemented the Kafka for the the robust development of the real time processing features of the module.
@@ -532,7 +532,7 @@
                                <!-- <i class="fa fa-google-plus"></i>-->
                             </div>
                             <div class="media-body">
-                                <h4 class="media-heading"><a> Integration Consultant, Integration Wizards Solutions, Bangalore, India</a></h4>
+                                <h4 class="media-heading"><a> Software Engineer, Integration Wizards Solutions, Bangalore, India</a></h4>
 								<h5><a>April-2021 - August-2021</a></h5>
                                 <p>Worked initially as an intern in the Integration team, later served as an Integration Consulatant. Durring this 
                                 	journey I worked in .Net, Sql Server Management Studio, compression of api, docker api's and much more to deliver high quality solution.
@@ -546,7 +546,7 @@
                                <!-- <i class="fa fa-google-plus"></i>-->
                             </div>
                             <div class="media-body">
-                                <h4 class="media-heading"><a> Research & Development Intern, Institute For Plasma Research Gandhinagar</a></h4>
+                                <h4 class="media-heading"><a> Research Intern, Institute For Plasma Research Gandhinagar</a></h4>
 								<h5><a>December-April, 2020-21</a></h5>
                                 <p>Software container technology exploration and containerization of a legacy application (IPR-CS-2020-010)
                                     5 months internship program taught me to conatinerize the applications by the help of DOCKER.
