--- a/index.html
+++ b/index.html
@@ -508,6 +508,18 @@
 
                     <div class="col-md-10 col-md-offset-1">
 
+                        <div class="media experience"> <!-- experience #1 -->
+                            <div class="media-right media-middle">
+                               <!-- <i class="fa fa-google-plus"></i>-->
+                            </div>
+                            <div class="media-body">
+                                <h4 class="media-heading"><a> Software Engineer, Quotograph, Waterloo, ON, Canada</a></h4>
+								<h5><a>February-2025 - Present</a></h5>
+                                <p>Engineered an interactive, high-performance measurement application leveraging React, Konva, and pdf.js, enabling real-time PDF uploads, scalable canvas-based measurements, and simplified data storage—boosting user efficiency by 40%. Implemented secure and robust PDF upload/download workflows by integrating RESTful APIs with Google Cloud Storage (GCP), ensuring high availability and seamless file access. Enhanced accuracy of real-world measurement tracking by incorporating precise scaling and canvas-based calculations, successfully reducing user errors by 30%.
+                                </p>
+                            </div>
+                        </div>
+
 
 
                     	<div class="media experience"> <!-- experience #1 -->
